<resources>
    <string name="app_name">ViiMe</string>
    <string name="facebook_app_id">518696345007422</string>
    <string name="fb_login_protocol_scheme">fb518696345007422</string>
    <string name="auth_failed">Sign up has failed. Please try again. </string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="vRewards">vRewards</string>
    <string name="sign_in_loading">Signing in</string>
    <string name="enter_password">Please enter a password</string>
    <string name="enter_email">Please enter an email</string>
    <string name="email_verification">It looks like you have not yet verified your email. Would you like us to re-send a verification email?</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="resend">Resend</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="vRewards_message">Get rewarded for your loyalty. Deals sent to you personally by venue owners will be found here!</string>
    <string name="age_updated">Age Updated</string>
    <string name="email_updated">Email Updated</string>
    <string name="name_updated">Name Updated</string>
    <string name="profile_updated">Profile being updated. This may take a few seconds.</string>
    <string name="profile_update_fail">Profile failed to update. Please try again.</string>
    <string name="profile_update_success">Profile updated successfully.</string>
    <string name="facebook_error">Failed to login with Facebook. Please try again.</string>
    <string name="empty_deals">No deals are currently available for this venue. Check back later!</string>
    <string name="wrong_redemption_code">Incorrect redemption code entered. Please try again. </string>
    <string name="gps_not_found_title">Location services not available </string>
    <string name="gps_not_found_message">It is required for deal redemption. Would you like to enable them now?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="redemption_successful">Redemption successful</string>
    <string name="redemption_unsuccessful">Redemption unsuccessful. Please try again.</string>


</resources>
