<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vl.viime.ProfileActivity"
    android:background="#444A59"
    android:clickable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            >



    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_picture"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/empty_profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rectangle"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:inputType="textNoSuggestions|none"
        android:paddingTop="5dp"
        android:paddingLeft="10dp"
        android:textColor="#fff"
        android:textCursorDrawable="@null"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_textview" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/rectangle"
        android:ems="10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_textview"
        android:textColor="#fff"
        android:layout_marginTop="8dp"
        android:paddingLeft="10dp"
        android:inputType="textNoSuggestions|text"
        android:textCursorDrawable="@null"
        android:focusableInTouchMode="true"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:background="@drawable/rectangle"
        android:ems="10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_textview"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="#fff"
        android:layout_marginTop="8dp"
        android:paddingLeft="10dp"
        android:inputType="textNoSuggestions|textEmailAddress"
        android:textCursorDrawable="@null"
        android:focusableInTouchMode="true"
        />

    <EditText
        android:id="@+id/birthday"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rectangle"
        android:ems="10"
        android:textColor="#fff"
        android:focusableInTouchMode="true"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_textview"
        android:paddingLeft="10dp"
        android:inputType="textNoSuggestions|datetime"
        android:textCursorDrawable="@null"
        />


    <TextView
        android:id="@+id/name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        android:text="@string/name"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:textColor="#fff"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/email_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="#fff"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp" />


    <TextView
        android:id="@+id/age_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="9dp"
        android:text="@string/age"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:textColor="#fff"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/username_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/username"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture"
        android:clickable="true"
        android:textColor="#fff"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/rewards_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="8dp"
        android:text="@string/vRewards"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday"
        android:textColor="#fff"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.065" />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/rewards_textview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="8dp">

        <ListView android:id="@+id/rewards_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#2C303C"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:drawSelectorOnTop="false"/>

        <TextView android:id="@+id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:textColor="#979797"
            android:padding="10dp"
            android:text="@string/vRewards_message"/>
    </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="wrap_content"
        android:text="LOGOUT"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:background="@color/red"/>
</android.support.constraint.ConstraintLayout>
